gcc/testsuite/rust/rustc/ui/missing/missing-block-hint.rs
fn main() {
    {
        if (foo) => {} // { dg-error "" "" { target *-*-* } }
    }
    {
        if (foo)
            bar; // { dg-error "" "" { target *-*-* } }
    }
}

